# PydanticAgent

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: PROJECT_DOCUMENTATION.md
src/pydantic_agent/: __init__.py  __main__.py  agent.py  cli.py  config.py  models.py  tui.py
tests/: test_agent.py  test_tui.py
