[project]
name = "pydantic-agent-cli"
version = "0.1.0"
description = "A Textual + Pydantic AI CLI agent for low-level software problem locating."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.8",
    "pydantic-ai>=1.0.0",
    "pydantic-settings>=2.4",
    "rich>=13.7",
    "textual>=0.86",
    "typer>=0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "ruff>=0.6",
]

[project.scripts]
pa-agent = "pydantic_agent.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pydantic_agent"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
